# sub/panel/api/columns.py
@@ -13,9 +13,19 @@ from sub.services.permissions import register_permission
 class Columns(Resource):
 
     def get(self):
+        nickname = g.args.get('nickname')
+
         filter_fields = ['id', 'name', 'column_id',
                          'status', 'account_id']
         query = get_slave_query(Column, filter_fields, g.args)
+        if nickname:
+            from sub.cache.accounts import get_account_ids_by_nickname
+            ids = get_account_ids_by_nickname(nickname)
+            if ids:
+                query = query.filter(Column.account_id.in_(ids))
+            else:
+                return [], 200, [('Total-Count', str(0))]
+
         count = query.count()
 
         offset, limit = get_offset_limit(g.args)
@@ -26,6 +36,8 @@ class Columns(Resource):
         return columns, 200, [('Total-Count', str(count))]
 
     def post(self):
+        from sub.tasks import add_nickname_account_ids
         g.json.update(review_status=Column.REVIEW_STATUS_AUTO_PASSED)
         column = Column.create(**g.json)
+        add_nickname_account_ids.delay(column.account_id)
         return column, 201
