# sub/panel/api/columns_id_articles.py
@@ -1,0 +1,34 @@
+# -*- coding: utf-8 -*-
+from flask import g
+
+from zaih_core.pager import get_offset_limit
+from sub.utils import get_slave_query
+from sub.models import Article
+
+from . import Resource
+
+
+class ColumnsIdArticles(Resource):
+
+    def get(self, id):
+        title = g.args.get('title')
+        status = g.args.get('status')
+
+        query = (
+            Article.query
+            .filter(Article.column_id == id))
+
+        if title:
+            query = query.filter(Article.title.like("%{}%".format(title)))
+        elif status:
+            query = query.filter(Article.status == status)
+
+        count = query.count()
+        offset, limit = get_offset_limit(g.args)
+        articles = (
+            query
+            .order_by(Article.date_created.desc())
+            .offset(offset)
+            .limit(limit)
+            .all())
+        return articles, 200, [('Total-Count', str(count))]
