# sub/panel/api/columns_id_posts.py
@@ -14,15 +14,14 @@ class ColumnsIdPosts(Resource):
     def get(self, id):
         query = (
             Post.query
-            .filter(~Post.is_hidden)
-            .filter(Post.column_id == id)
-            .filter(Post.review_status.in_(Post.PUBLIC_REVIEW_STATUSES)))
+            .filter(Post.column_id == id))
+
         count = query.count()
         offset, limit = get_offset_limit(g.args)
         posts = (
             query
             .order_by(Post.is_sticky.desc())
-            .order_by(Post.date_updated.desc())
+            .order_by(Post.date_created.desc())
             .offset(offset)
             .limit(limit)
             .all())
